2007-05-31  Xan Lopez  <xan.lopez@nokia.com>

	* src/sapwood-draw.c (check_child_position, check_buttonbox_child_position):
	use GTK_WIDGET_DRAWABLE instead of GTK_WIDGET_VISIBLE to check if a widget
	is currently visible in the screen.

2007-04-19  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* === Release 2.91.4 ===

2007-04-19  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-server.c (extract_pixmap_single): Revert the white
	background initialization as it adds unwanted tint to the graphics.
	Reopens MB#1216

2007-04-18  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* demos/Makefile.am
	* demos/gradient.c
	* demos/gradient.gtkrc
	* demos/images/gradient.png: Add testcase for gradient

	* src/sapwood-server.c (extract_pixmap_single): To avoid uninitialized
	pixels when loading images with alpha channel, paint the pixmap white
	first. MB#1216

2007-04-18  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* demos/Makefile.am
	* demos/images/hbbox.png: remove ugly solid black image
	* demos/images/hbbox-*.png: use proper mask for the corners
	* demos/buttonbox.gtkrc: use the all-round image as fallback

2007-04-18  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (draw_simple_image): Add missing cast for
	gtk_container_get_children

2007-04-17  Xan Lopez  <xan.lopez@nokia.com>

	* README:
	* demos/buttonbox.gtkrc:

	Update the documentation and the demo to take into account maemo-position-theming.
	
2007-04-17  Xan Lopez  <xan.lopez@nokia.com>

	* src/sapwood-draw.c (draw_simple_image): Check that the maemo-position-theming
	property exists before accessing it.

2007-04-16  Xan Lopez  <xan.lopez@nokia.com>

	* src/sapwood-draw.c (draw_simple_image): Don't take internal children
	into account for the position theming.

2007-04-13  Xan Lopez  <xan.lopez@nokia.com>

	* src/sapwood-draw.c: Add general positioning theming based on GTK+
	"maemo-position-theming" style property.
